# canvas-botto

./: .gitignore  README.md  canvasapi_test.py  get_canvas_course_info.py  hello.py  pyproject.toml  sample.env
canvas_botto/: canvas_models.py  get_canvas_course_student_roster.py
docs/: ai-prep.md  ideation.md
experiments/canvas-exp/: canvasapi_test.py  notes.md  pyproject.toml
experiments/canvas-exp/ai_gen/: dummy_walkthrough.md  prof_readme.md
experiments/ollama-exp/: api_example.md  process-reprocess.py  pyproject.toml  skellybot-example.py  structured_output.py
