[tool.poetry]
name = "ollama-exp"
version = "0.1.0"
description = ""
authors = ["J.K. Lindstedt <john.k.lindstedt@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ollama = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
